--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </p>
 
             <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
-              <input type="text" class="form-control" placeholder="Input your IMEI" />
+              <input type="text" class="form-control" placeholder="" />
               <button type="submit" class="btn btn-primary">Search</button>
             </form>
 
