--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <div class="col-lg-3 col-md-12 footer-contact text-md-start">
             <h4>Office Address</h4>
             <p>
               Jl. Gatot Subroto No.Kav. 52-53, RT.1/RW.4, Kuningan Tim., Kecamatan Setiabudi <br />
