--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#faq">FAQ</a></li>
+            <li><a href="#lapor">Lapor</a></li>
             <li><a href="#about">About</a></li>
             <li><a class="get-a-quote" href="#footer">Contact Us</a></li>
           </ul>
@@ -165,6 +166,35 @@
         </div>
       </section>
       <!-- End Frequently Asked Questions Section -->
+
+      <!-- ======= Contact Section ======= -->
+      <section id="lapor" class="lapor">
+        <div class="container" data-aos="fade-up">
+          <div class="section-header">
+            <span>Lapor</span>
+            <h2>Lapor</h2>
+          </div>
+
+          <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-10">
+                <div class="card card-bg shadow hero-header-form">
+                  <div class="card-body p-4 p-xl-16">
+                    <form class="mb-3" action="#">
+                      <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingName" type="text" placeholder="name"><label for="floatingName">Your name</label></div>
+                      <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingCatrgory" type="text" placeholder="Insurance Category"><label for="floatingImei">Your IMEI</label></div>
+                      <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingPhone" type="tel" placeholder="name@example.com"><label for="floatingPhone">Phone</label></div>
+                      <div class="form-floating mb-3"><input class="form-control input-box form-ensurance-header-control" id="floatingEmail" type="email" placeholder="name@example.com"><label for="floatingEmail">Email</label></div>
+                      
+                      <div class="form-floating mb-3"><textarea class="form-control input-box form-ensurance-header-control" id="floatingTextarea" placeholder="Leave a comment here"></textarea><label for="floatingTextarea">Comments</label></div>
+                      <div class="col-12 d-grid"> <button class="btn btn-primary rounded-pill" type="submit">Send</button></div>
+                    </form>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Contact Section -->
 
       <!-- ======= About Us Section ======= -->
       <section id="about" class="about">
