--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
                   </div>
                 </div>
 
+                <div class="accordion-item">
+                  <h3 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
+                      <i class="bi bi-question-circle question-icon"></i>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit?
+                    </button>
+                  </h3>
+                  <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
+                    <div class="accordion-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at libero nec risus tincidunt luctus. Nulla tempus eu massa sed efficitur. Proin interdum quis velit blandit vulputate. Duis tempus vehicula augue, eget tincidunt lectus. Ut vel sapien ut diam volutpat volutpat. In aliquet lectus eu massa pulvinar, quis hendrerit elit congue. Nulla augue nunc, consequat a mattis id, egestas in ligula. Pellentesque sodales dignissim dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nec nisl in libero mollis vehicula. Pellentesque pharetra metus posuere nunc euismod sodales. Donec eleifend nibh urna, ac lacinia quam suscipit quis. In hac habitasse platea dictumst. Aliquam auctor augue lobortis enim accumsan sodales.</a></b>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
@@ -176,7 +190,7 @@
           </div>
 
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="col-lg-10">
+            <div class="col-lg-8">
                 <div class="card card-bg shadow hero-header-form">
                   <div class="card-body p-4 p-xl-16">
                     <form class="mb-3" action="#">
