--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Clients</p>
+                  <p>Aktif Permanen</p>
                 </div>
               </div>
               <!-- End Stats Item -->
@@ -77,15 +77,15 @@
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Projects</p>
+                  <p>Aktif Berjangka</p>
                 </div>
               </div>
               <!-- End Stats Item -->
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
-                  <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Support</p>
+                  <span data-purecounter-start="0" data-purecounter-end="53" data-purecounter-duration="1" class="purecounter"></span>
+                  <p>Blokir</p>
                 </div>
               </div>
               <!-- End Stats Item -->
@@ -93,7 +93,7 @@
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Workers</p>
+                  <p>Blokir Permanen</p>
                 </div>
               </div>
               <!-- End Stats Item -->
