--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Cek Imei - Kemenperin</title>
+    <title>Imei Nasional</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -29,9 +29,9 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header d-flex align-items-center fixed-top">
       <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-        <a href="#" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="" />
-        </a>
+        <div class="logo d-flex align-items-center">
+          <!-- <img src="assets/img/logo.png" alt="" /> -->
+        </div>
 
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
         <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -57,14 +57,12 @@
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h2 data-aos="fade-up">Cek Imei Nasional</h2>
             <p data-aos="fade-up" data-aos-delay="100">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis elementum quam congue posuere. Duis a sem ac felis posuere mollis ut in odio. Curabitur elementum augue quis sem blandit, id mattis ligula rhoncus. Donec a elit id ipsum scelerisque imperdiet nec id lorem. Sed vehicula dolor at eros vehicula, vel semper velit accumsan.
+              IMEI Nasional dibuat berdasarkan Basis Data TAC terbesar di seluruh dunia. Fitur Periksa IMEI adalah salah satu alat yang paling berguna dalam industri GSM. Untuk memenuhi harapan Anda, kami menambahkan informasi dan spesifikasi perangkat baru setiap harinya. Fungsi Periksa Pencarian IMEI kami sepenuhnya gratis dan mudah digunakan. Data seperti IMEI dan Nomor Seri adalah kode yang dibuat untuk mengidentifikasi perangkat yang menggunakan jaringan seluler tetapi selain memenuhi fungsi dasar ini, Nomor IMEI memberi kita kesempatan untuk mendapatkan akses ke banyak informasi menarik. Temukan Nomor IMEI Anda dan dapatkan akses ke tanggal garansi, informasi operator, status daftar hitam, tanggal pembelian, dan lainnya. Berikut ini cara cek nomor International Mobile Equipment Identity (IMEI).
             </p>
-
             <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
               <input type="text" class="form-control" placeholder="" />
               <button type="submit" class="btn btn-primary">Search</button>
             </form>
-
             <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
@@ -73,7 +71,6 @@
                 </div>
               </div>
               <!-- End Stats Item -->
-
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
@@ -81,7 +78,6 @@
                 </div>
               </div>
               <!-- End Stats Item -->
-
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="53" data-purecounter-duration="1" class="purecounter"></span>
@@ -89,7 +85,6 @@
                 </div>
               </div>
               <!-- End Stats Item -->
-
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
@@ -99,7 +94,6 @@
               <!-- End Stats Item -->
             </div>
           </div>
-
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
             <img src="assets/img/hero-img.svg" class="img-fluid mb-3 mb-lg-0" alt="" />
           </div>
@@ -116,7 +110,6 @@
             <span>Frequently Asked Questions</span>
             <h2>Frequently Asked Questions</h2>
           </div>
-
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-10">
               <div class="accordion accordion-flush" id="faqlist">
@@ -131,7 +124,6 @@
                     <div class="accordion-body">Tidak langsung diblokir, tetapi ketentuan atas masa pakainya akan ditentukan kemudian sesuai dengan peraturan perundang-undangan yang berlaku.</div>
                   </div>
                 </div>
-
                 <div class="accordion-item">
                   <h3 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
@@ -159,7 +151,6 @@
                     </div>
                   </div>
                 </div>
-
                 <div class="accordion-item">
                   <h3 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-4">
@@ -188,7 +179,6 @@
             <span>Lapor</span>
             <h2>Lapor</h2>
           </div>
-
           <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-8">
                 <div class="card card-bg shadow hero-header-form">
@@ -221,28 +211,28 @@
             <div class="col-lg-6 content order-last order-lg-first">
               <h3>About Us</h3>
               <p>
-                Kementerian Perindustrian mempunyai tugas menyelenggarakan urusan pemerintahan di bidang perindustrian untuk membantu Presiden dalam menyelenggarakan pemerintahan negara.
+                Dalam rangka mencegah peredaran ponsel ilegal yang di Indonesia, pemerintah mengeluarkan Peraturan Menteri Komunikasi dan Informatika Nomor 1 Tahun 2020 tentang Pengendalian Alat dan/atau Perangkat Telekomunikasi Yang Tersambung Ke Jaringan Bergerak Seluler Melalui Identifikasi International Mobile Equipment Identity, serta ada beberapa peraturan yang dikeluarkan kementerian terkait seperti Peraturan Menteri Perindustrian Nomor 29 tahun 2019 tentang Sistem Basis Data Identitas Perangkat Telekomunikasi Bergerak. International Mobile Equipment Identity (IMEI) nomor identitas internasional yang terdiri dari 15 (lima belas) digit, dihasilkan dari 8 (delapan) digit Type Allocation Code yang dialokasikan oleh Global System for Mobile Association untuk mengidentifikasi secara unik Alat dan/atau Perangkat HKT yang tersambung ke jaringan bergerak seluler.
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
                   <i class="bi bi-diagram-3"></i>
                   <div>
-                    <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                    <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                    <h5>Langkah 1</h5>
+                    <p>Panggil *#06# untuk melihat IMEI perangkat Anda</p>
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-fullscreen-exit"></i>
                   <div>
-                    <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                    <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                    <h5>Langkah 2</h5>
+                    <p>Masukkan IMEI pada kolom diatas</p>
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="300">
                   <i class="bi bi-broadcast"></i>
                   <div>
-                    <h5>Voluptatem et qui exercitationem</h5>
-                    <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
+                    <h5>Langkah 3</h5>
+                    <p>Dapatkan informasi tentang perangkat Anda</p>
                   </div>
                 </li>
               </ul>
@@ -294,8 +284,8 @@
 
       <div class="container mt-4">
         <div class="copyright">
-          &copy; Copyright <strong><span>Kementerian Perindustrian RI</span></strong
-          >. All Rights Reserved
+          &copy; Copyright <a href="#"><strong><span>Imei Nasional</span></strong
+          ></a>. All Rights Reserved
         </div>
         <!-- <div class="credits">
           Designed by <a href=""></a>
