--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12950<br />
               Indonesia <br /><br />
               <strong>Phone:</strong> +62 00 000 0000<br />
-              <strong>Email:</strong> admin@imeinasional.id<br />
+              <strong>Email:</strong> contact@imeinasional.id<br />
             </p>
           </div>
         </div>
